# matrix-ci-bot

./: Cargo.toml  Dockerfile  README.md  action.yml
.github/workflows/: build.yml  notification.yml
src/: cli.rs  github.rs  main.rs
