[package]
name = "matrix-ci-bot"
version = "0.1.0"
edition = "2024"

[package.metadata.rust-version]
version = "1.91.1"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
matrix-sdk = { version = "0.14.0", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }

[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Enable link-time optimization
codegen-units = 1       # Better optimization, slower compile
strip = "symbols"       # Strip symbols (stable since Rust 1.80)
panic = "abort"         # Remove unwinding machinery

[target.'cfg(target_os = "linux")']
rustflags = ["-C", "target-feature=+crt-static"]
